# fresh-rust-cli

./: .gitignore  ANALYSIS_FILES_README.md  ANALYSIS_SUMMARY.txt  ARCHITECTURE_ANALYSIS.md  CHANGELOG.md  CONFIG_SYSTEM.md  Cargo.toml  EVENT_LOG_ARCHITECTURE.md  LSP_PLUGINS_ANALYSIS.md  NEW_ARCHITECTURE.md  README.md  SHARED_LIBRARY_RECOMMENDATIONS.md  TODO.md  build.rs  config.example.json  dist-workspace.toml  flake.nix  test_usability.md
crates/fresh-editor/: Cargo.toml  build.rs  config.example.json
crates/fresh-editor/flatpak/: io.github.sinelaw.fresh.yml
crates/fresh-editor/keymaps/: default.json  emacs.json  macos.json
crates/fresh-editor/locales/: cs.json  de.json  en.json  es.json  fr.json  it.json  ja.json  ko.json  pt-BR.json  ru.json  th.json  uk.json  vi.json  zh-CN.json
crates/fresh-editor/npm-package/: binary-install.js
crates/fresh-editor/plugins/: audit_mode.i18n.json  audit_mode.ts  conductor.ts  config-schema.json  dashboard.ts  devcontainer.i18n.json  devcontainer.ts  diagnostics_panel.ts  find_references.ts  flash.ts  git_blame.ts  git_log.ts  k8s-workspace.ts  live_diff.ts  live_grep.ts  merge_conflict.ts  orchestrator.ts  pkg.i18n.json  pkg.ts  search_replace.i18n.json  search_replace.ts  theme_editor.i18n.json  theme_editor.ts  vi_mode.ts
crates/fresh-editor/plugins/examples/: bookmarks.ts  hello_world.ts
crates/fresh-editor/plugins/lib/: finder.ts  fresh.d.ts  widgets.ts
crates/fresh-editor/plugins/schemas/: package.schema.json  theme.schema.json
crates/fresh-editor/resources/: fresh-gui.desktop
crates/fresh-editor/scripts/: build-appimage.sh
crates/fresh-editor/src/: config.rs  init_script.rs  main.rs  partial_config.rs  runtime_config.rs  state.rs  test_api.rs  types.rs
crates/fresh-editor/src/app/: action_events.rs  active_focus.rs  async_dispatch.rs  async_messages.rs  buffer_close.rs  buffer_management.rs  clipboard.rs  composite_buffer_actions.rs  diagnostic_jumps.rs  editor_accessors.rs  editor_init.rs  event_apply.rs  file_explorer.rs  file_open.rs  file_open_input.rs  file_open_orchestrators.rs  file_operations.rs  hover.rs  input.rs  input_dispatch.rs  keybinding_editor.rs  keybinding_editor_actions.rs  lifecycle.rs  lsp_requests.rs  macro_actions.rs  menu_context.rs  mod.rs  mouse_input.rs  navigation.rs  on_save_actions.rs  orchestrator_persistence.rs  overlay.rs  path_utils.rs  plugin_commands.rs  plugin_dispatch.rs  popup_actions.rs  popup_dialogs.rs  popup_overlay_actions.rs  prompt_actions.rs  prompt_lifecycle.rs  (+15 more)
crates/fresh-editor/src/app/keybinding_editor/: editor.rs  types.rs
crates/fresh-editor/src/app/types/: layout.rs  theme.rs
crates/fresh-editor/src/grammars/: smali.sublime-syntax
crates/fresh-editor/src/input/: actions.rs  command_registry.rs  commands.rs  keybindings.rs
crates/fresh-editor/src/model/: buffer.rs  encoding.rs  event.rs  filesystem.rs  mod.rs
crates/fresh-editor/src/primitives/: detected_language.rs  highlight_engine.rs  highlighter.rs  indent.rs  indent_rules.rs  reference_highlighter.rs
crates/fresh-editor/src/server/: editor_server.rs  local_control.rs  mod.rs  protocol.rs  runner.rs  tests.rs
crates/fresh-editor/src/services/: clipboard.rs  mod.rs  packages.rs  process_hidden.rs  process_limits.rs  tracing_setup.rs
crates/fresh-editor/src/view/: animation.rs  conceal.rs  keybinding_editor.rs  margin.rs  mod.rs  overlay.rs  popup.rs  prompt.rs  prompt_input.rs  split.rs  viewport.rs  visual_row_index.rs
crates/fresh-editor/src/widgets/: actions.rs  mod.rs  registry.rs  render.rs
crates/fresh-editor/tests/: integration_tests.rs  remote_poll_hang_tests.rs  screensaver_test.rs  shadow_model_multi_cursor_tests.rs  shadow_model_tests.rs  test_theme_schema_i18n.rs  undo_redo_marker_roundtrip_tests.proptest-regressions  undo_redo_marker_roundtrip_tests.rs
crates/fresh-editor/tests/common/: blog_showcase.rs  fake_lsp.rs  harness.rs  mod.rs  timing.rs
crates/fresh-editor/tests/e2e/: blog_showcases.rs  buffer_groups.rs  command_palette.rs  ctrl_end_wrapped.rs  duplicate_line.rs  encoding.proptest-regressions  encoding.rs  explorer_bugs.rs  explorer_context_menu.rs  explorer_menu.rs  file_browser.rs  file_explorer.rs  flash.rs  glob_language_detection.rs  issue_1288_word_select_whitespace.rs  issue_1502_word_wrap_squished.rs  issue_1566_arrow_selection.rs  issue_1568_session_fold_restore.rs  issue_1569_explorer_auto_expand.rs  issue_1571_fold_indicator_lag.rs  issue_1574_wrapped_down_scroll.rs  issue_1718_settings_search_utf8_panic.rs  issue_2030_quit_confirm_and_disable.rs  issue_2362_replace_toolbar_theme.rs  keybinding_editor.rs  language_features_e2e.rs  large_file_inplace_write_bug.rs  line_wrap_full_visibility.rs  line_wrap_parity.rs  line_wrapping.rs  live_grep.rs  lsp.rs  lsp_code_action_modal.rs  lsp_completion_dynamic_registration.rs  lsp_diagnostic_flow.rs  lsp_env.rs  lsp_lifecycle_visibility.rs  lsp_popup_focus_keybinding.rs  markdown_compose.rs  mod.rs  (+30 more)
crates/fresh-editor/tests/fixtures/: issue_1574_encodings.md  issue_1574_wrapped_lines.md  large.rs
crates/fresh-editor/tests/plugins/: test_buffer_groups.ts
crates/fresh-editor/tests/semantic/: layout.rs  layout_expanded.rs  layout_shadow_diff.rs  migrated_action_shapes.rs  migrated_emacs_extras.rs  migrated_issue_1574_viewport_drift.rs  migrated_issue_repros.rs  migrated_macros.rs  migrated_misc.rs  migrated_more_actions.rs  migrated_more_buffer.rs  migrated_more_layout.rs  migrated_more_modals.rs  migrated_more_persistence.rs  migrated_more_unicode.rs  migrated_more_workspace.rs  migrated_multibyte_extras.rs  migrated_multicursor_extras.rs  migrated_paste_extras.rs  migrated_persistence_b.rs  migrated_search_modal_flows.rs  migrated_selection_extras.rs  migrated_smart_editing.rs  migrated_undo_bulk_edit_after_save.rs  migrated_undo_save_point.rs  migrated_unicode_grapheme.rs  mod.rs  scenario_shapes.rs  selftest.rs
crates/fresh-editor/themes/: light.json
crates/fresh-gui/: Cargo.toml
crates/fresh-gui/src/: lib.rs  platform.rs
crates/fresh-languages/: Cargo.toml
crates/fresh-languages/src/: lib.rs
(+398 files in other folders)
