[workspace]
resolver = "2"
members = [
    "crates/fresh-editor",
    "crates/fresh-gui",
    "crates/fresh-core",
    "crates/fresh-parser-js",
    "crates/fresh-languages",
    "crates/fresh-plugin-runtime",
    "crates/fresh-plugin-api-macros",
    "crates/fresh-winterm",
]
default-members = [
    "crates/fresh-editor",
    "crates/fresh-core",
    "crates/fresh-parser-js",
    "crates/fresh-languages",
    "crates/fresh-plugin-runtime",
    "crates/fresh-plugin-api-macros",
    "crates/fresh-winterm",
]

[workspace.package]
version = "0.2.25"
authors = ["Noam Lewis"]
edition = "2021"
license = "GPL-2.0"
repository = "https://github.com/sinelaw/fresh"
homepage = "https://sinelaw.github.io/fresh/"
documentation = "https://docs.rs/fresh-editor"

[workspace.dependencies]
# Local crates
fresh-core = { version = "0.2.25", path = "crates/fresh-core" }
fresh-gui = { version = "0.2.25", path = "crates/fresh-gui" }
fresh-parser-js = { version = "0.2.25", path = "crates/fresh-parser-js" }
fresh-languages = { version = "0.2.25", path = "crates/fresh-languages" }
fresh-plugin-runtime = { version = "0.2.25", path = "crates/fresh-plugin-runtime" }
fresh-plugin-api-macros = { version = "0.2.25", path = "crates/fresh-plugin-api-macros" }
fresh-winterm = { version = "0.2.25", path = "crates/fresh-winterm" }

# External crates
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = { version = "1.0.100", default-features = false }
tokio = { version = "1.49", features = ["fs", "io-util", "process", "rt", "rt-multi-thread", "sync", "time", "macros"] }
once_cell = "1.20"
tracing = "0.1"
rust-i18n = "3.1.5"
schemars = { version = "1.2", features = ["preserve_order"] }
rquickjs = { version = "0.11", features = ["futures", "macro"] }
rquickjs-serde = "0.5"
oxc_allocator = "0.115.0"
oxc_ast = "0.115.0"
oxc_parser = "0.115.0"
oxc_transformer = "0.115.0"
oxc_codegen = { version = "0.115.0", default-features = false }
oxc_span = "0.115.0"
oxc_semantic = "0.115.0"
oxc_diagnostics = "0.115.0"
tree-sitter = "0.26.5"
tree-sitter-highlight = "0.26.3"
crossterm = "0.29"
winit = "0.30"
wgpu = "28.0"
lsp-types = "0.97"
ts-rs = { version = "12.0", features = ["serde_json"] }
# Add more as needed during refactor

[profile.release]
debug = 0
codegen-units = 4
lto = "off" # speed up the binary final build
force-frame-pointers = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
