[package]
name = "fresh-gui"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "GUI backend for Fresh editor: windowed ratatui via winit + wgpu"
license.workspace = true
repository.workspace = true
publish = false  # depends on git-only ratatui-wgpu, not publishable to crates.io

[dependencies]
# Shared types (Menu, MenuItem) — the menu model lives here
fresh-core = { workspace = true }
# Window management
winit = { workspace = true }
# ratatui backend for wgpu
ratatui-wgpu = { git = "https://github.com/Jesterhearts/ratatui-wgpu", rev = "cdcf5c6" }
# TUI framework (core types: Terminal, Frame, Backend)
ratatui = { version = "0.30.0", default-features = false, features = ["std", "underline-color"] }
# Event types (KeyEvent, MouseEvent, KeyModifiers, etc.)
crossterm = { version = "0.29.0", features = ["osc52"] }
# Error handling
anyhow = { workspace = true }
# Logging
tracing = { workspace = true }
# Async runtime for wgpu init (needs rt-multi-thread for Runtime::new())
tokio = { version = "1.49", features = ["rt", "rt-multi-thread"] }
# JSON for menu action args
serde_json = { workspace = true }
# PNG decoding for window icon (already a transitive dep via ratatui-wgpu)
png = "0.18"

# macOS: native menu bar
[target.'cfg(target_os = "macos")'.dependencies]
muda = "0.15"
# ObjC interop for NSNotificationCenter (menu tracking detection).
# Versions match the ones muda 0.15 already pulls in.
objc2-foundation = { version = "0.2", features = ["NSNotification", "NSString", "NSOperation", "block2"] }
block2 = "0.5"
